fix: misc scrollbar fixes  - remove loading loadsplashkit.js (causes errors, handled elsewhere)  - remove console.logs  - fix 'double load' problem, since there are two files  - fix loading bar being stuck on screen in C# one  - improve style slightly

--- a/Browser_IDE/stylesheet.css
+++ b/Browser_IDE/stylesheet.css
@@ -584,7 +584,7 @@ li.CodeMirror-hint-active {
 }
 
 .loading-container {
-  display: flex;
+  display: none; /* hide by default */
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -592,7 +592,7 @@ li.CodeMirror-hint-active {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 1000;
   flex-direction: column;
 }
@@ -606,7 +606,7 @@ li.CodeMirror-hint-active {
 
 .loading-progress {
   width: 0;
-  height: 30px;
+  height: 1.4em;
   background-color: #24262d;
 }
 
@@ -616,7 +616,6 @@ li.CodeMirror-hint-active {
   left: 50%; 
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 18px;
 }
 
 /* Modal UI changes */
